Fix some overflow issues on history page

--- a/src/app/admin/historyPage/historyPage.component.scss
+++ b/src/app/admin/historyPage/historyPage.component.scss
@@ -57,7 +57,7 @@
         &.side-nav {
             a {
                 color: #FFF;
-        
+
                 ::ng-deep {
                     svg {
                         vertical-align: middle;
@@ -66,7 +66,7 @@
                         }
                     }
                 }
-        
+
                 &.list-group-item {
                     background: transparent;
                     border: 1px solid transparent;
@@ -74,26 +74,26 @@
                     padding-top: 6px;
                     padding-bottom: 6px;
                     color: #FFF;
-        
+
                     &:hover {
                         color: #FFF;
                         border: 1px solid rgba(255, 255, 255, 0.2);
                     }
-        
+
                     &.active {
                         background: rgba(0, 0, 0, 0.1);
                         border: 1px solid rgba(255, 255, 255, 0.2);
                     }
                 }
-        
+
                 small {
                     color: rgba(255, 255, 255, 0.7);
                 }
-        
+
             }
         }
     }
-    
+
     .date-group:not(:first-child) {
         h2 {
             margin-top: 20px;
@@ -118,34 +118,15 @@
                 border-bottom: 1px solid rgba(0, 0, 0, 0.12);
             }
 
-            .version {
-                position: relative;
-                width: 10px;
-                line-height: 1.5;
-                font-size: 12px;
-                display: inline-block;
-                vertical-align: middle;
-
-                &::after {
-                    content: '\00a0';
-                }
-
-                span {
-                    color: rgba(0, 0, 0, 0.5);
-                    position: absolute;
-                    right: 0;
-                }
-            }
-
             .photo {
-                display: inline-block;
-                vertical-align: top;
-                border-radius: 24px;
+                display: block;
                 overflow: hidden;
                 margin: 6px;
+                min-width: 48px;
 
                 ::ng-deep {
                     img {
+                        border-radius: 24px;
                         width: 48px;
                         height: 48px;
                     }
@@ -177,7 +158,7 @@
 
             .text,
             .text-content {
-                display: inline-block;
+                flex-grow: 1;
                 code {
                     background-color: rgba(0, 0, 0, 0.08);
                 }
@@ -192,7 +173,7 @@
             }
 
             .actions {
-                float: right;
+                flex-shrink: 0;
                 margin-right: 10px;
                 margin-top: 15px;
 
